--- a/SEP-Drive/sep-drive-frontend/src/app/components/profile/profile.component.html
+++ b/SEP-Drive/sep-drive-frontend/src/app/components/profile/profile.component.html
@@ -28,7 +28,7 @@
         class="remove-btn"
         (click)="resetProfilePicture()"
       >
-        Standard Bild
+        Bild entfernen
       </button>
     </div>
   </div>
