--- a/SEP-Drive/sep-drive-frontend/src/app/app.component.html
+++ b/SEP-Drive/sep-drive-frontend/src/app/app.component.html
@@ -4,12 +4,14 @@
     <!-- LINKS: Hamburger fürs Side-Menu -->
     <div class="header-left">
       <button
-        *ngIf="authService.isLoggedIn()"
-        class="menu-button"
-        aria-label="Menü öffnen/schließen"
-        (click)="toggleMenu()">
-        ☰
-      </button>
+  class="back-btn"
+  (click)="goHome()"
+  aria-label="Zurück zur Startseite">
+  <svg width="28" height="28" viewBox="0 0 28 28" style="vertical-align: middle;">
+    <polyline points="18,6 10,14 18,22" fill="none" stroke="#c72290" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round"/>
+  </svg>
+</button>
+
       <div *ngIf="!authService.isLoggedIn()" class="header-placeholder"></div>
     </div>
 
@@ -23,14 +25,13 @@
       </a>
     </div>
 
+
+
     <!-- RECHTS: Nur das Profilbild (Kreis), klickbar auf /profile -->
     <div class="header-right">
       <ng-container *ngIf="authService.isLoggedIn(); else anon">
         <a routerLink="/profile" aria-label="Mein Profil">
-          <img
-            [src]="getProfileImageUrl()"
-            alt="Profilbild"
-            class="profile-img">
+          <img [src]="getProfileImageUrl()" alt="Profilbild" class="profile-img">
         </a>
       </ng-container>
       <ng-template #anon>
@@ -71,3 +72,5 @@
     <p>&copy; {{ currentYear }} SEP-Drive</p>
   </footer>
 </div>
+
+
